--- a/main.html
+++ b/main.html
@@ -1,16 +1,32 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Digital-Clock</title>
+    <style>
+        body{
+            height: 100vh;
+            width: 100vw;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+    </style>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
-
+    <p id = "timer"></p>
 </body>
+<script>
 
+    setInterval(()=>{
+        const currentTime = new Date()
+        const time = currentTime.toLocaleTimeString()
+        const date = currentTime.toLocaleDateString()
+      document.getElementById("timer").innerText = `${date},${time}`
+    },1000)
+
+   //   console.log(currentTime)
+
+</script>
 </html>
